Fixed maps images on mobile site

--- a/style.css
+++ b/style.css
@@ -357,6 +357,10 @@ form .text {
 		width: 100%;
 	}
 	
+	.float.maps{
+		width: 100%;
+	}
+	
 	.float span {
 		width: 100%;
 		font-size: 150%;
